FIX: Sidebar toggle icon is now visible

--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -23,6 +23,7 @@
   position: fixed;
   top: 13px;
   left: 30px;
+  z-index: 1;
 }
 
 @media (max-width: 600px) {
